--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Gravity
-email: hemangsk@gmail.com
-description: The Liberal Jekyll Theme
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: hemang_kumar
-github_username:  hemangsk
+title: Balachandra Pai
+email: balachandra.pai95@gmail.com
+description: The AI Junkie
+baseurl: "/aijunkie" # the subpath of your site, e.g. /blog
+url: "https://balachandrapai.github.io" # the base hostname & protocol for your site
+#twitter_username: hemang_kumar
+github_username:  balachandrapai
 paginate: 5
 theme-dark: false #Set to true to change to dark website theme
 
