--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Balachandra Pai
 email: balachandra.pai95@gmail.com
 description: Data Scientist in the making... Here to make complex things simple.
-baseurl: "/aijunkie" # the subpath of your site, e.g. /blog
+baseurl: "/bazinga" # the subpath of your site, e.g. /blog
 url: "https://balachandrapai.github.io" # the base hostname & protocol for your site
 #twitter_username: hemang_kumar
 github_username:  balachandrapai
